Fix vertical scrollbar issue

--- a/src/MyChessReact/src/App.css
+++ b/src/MyChessReact/src/App.css
@@ -19,7 +19,6 @@
   height: 10vmin;
   font-size: calc(14px + 2vmin);
   text-align: center;
-  width: 100%;
   margin: 10px;
 }
 
